--- a/index.ipynb
+++ b/index.ipynb
@@ -251,6 +251,7 @@
     "    print(idx)\n",
     "    if idx == 0:\n",
     "        temp = df['Stay Win'].iloc[0]\n",
+    "        row['P_Stay_Win'] = sum(temp)/len(temp)\n",
     "    else:\n",
     "        temp = df['Stay Win'].iloc[0:idx]\n",
     " \n",
