--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,7 @@
     "for idx,row in df.iterrows():\n",
     "    if idx == 0:\n",
     "        temp = df['Stay Win'].iloc[0]\n",
-    "        row['P_Stay_Win'] = temp/1\n",
+    "        P_Stay_Win = temp/1\n",
     "    else:\n",
     "        temp = df['Stay Win'].iloc[0:idx]\n",
     "        row['P_Stay_Win'] = sum(temp)/len(temp)\n",
