--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,7 @@
     "        P_Stay_Win = temp/1\n",
     "    else:\n",
     "        temp = df['Stay Win'].iloc[0:idx]\n",
-    "        row['P_Stay_Win'] = sum(temp)/len(temp)\n",
+    "        P_Stay_Win = sum(temp)/len(temp)\n",
     "    df['P_Stay_Win'] = "
    ]
   },
