--- a/index.ipynb
+++ b/index.ipynb
@@ -225,9 +225,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 126,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/pandas/core/indexing.py:205: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self._setitem_with_indexer(indexer, value)\n"
+     ]
+    }
+   ],
    "source": [
     "for idx,row in df.iterrows():\n",
     "    if idx == 0:\n",
@@ -236,7 +248,7 @@
     "    else:\n",
     "        temp = df['Stay Win'].iloc[0:idx]\n",
     "        P_Stay_Win = sum(temp)/len(temp)\n",
-    "    df['P_Stay_Win'] = P_Stay_Win"
+    "    df['P_Stay_Win'].iloc[idx] = P_Stay_Win"
    ]
   },
   {
